# CalcMySky

./: .appveyor.yml  CMakeLists.txt  NOTES.mdown  README.mdown  cmdline.cpp  common-functions.frag  common-functions.h.glsl  compile-and-link.cpp  compute-indirect-irradiance.frag  compute-irradiance.frag  compute-multiple-scattering.frag  compute-scattering-density.frag  compute-single-scattering.frag  compute-transmittance.frag  config.h.in  const.hpp  copy-scattering-texture.frag  data.hpp  debug.h  densities.h.glsl  glinit.cpp  main.cpp  multiple-scattering.frag  phase-function.h.glsl  phase-functions.h.glsl  sample.atmo  shader.geom  shaders.cpp  shaders.hpp  shaders.qrc  single-scattering.frag  single-scattering.h.glsl  texture-coordinates.frag  texture-coordinates.h.glsl  texture-sampling-functions.frag  texture-sampling-functions.h.glsl  util.cpp  util.hpp  version.cpp.in  version.sh
CalcMySky/: AtmosphereParameters.cpp  CMakeLists.txt  Refraction.cpp  Refraction.hpp  Spectrum.cpp  cmdline.cpp  cmdline.hpp  const.hpp  data.hpp  glinit.cpp  glinit.hpp  interpolation-guides.cpp  interpolation-guides.hpp  main.cpp  shaders.cpp  shaders.hpp  util.cpp  util.hpp
ShowMySky/: AtmosphereRenderer.cpp  AtmosphereRenderer.hpp  BlueNoiseTriangleRemapped.hpp  CMakeLists.txt  DockScrollArea.cpp  DockScrollArea.hpp  GLSLCosineQualityChecker.cpp  GLSLCosineQualityChecker.hpp  GLWidget.cpp  GLWidget.hpp  IAtmosphereRenderer.cpp  IAtmosphereRenderer.hpp  MainWindow.cpp  MainWindow.hpp  Manipulator.cpp  Manipulator.hpp  RadiancePlot.cpp  RadiancePlot.hpp  ToolsWidget.cpp  ToolsWidget.hpp  main.cpp  util.cpp  util.hpp
ShowMySky/api/: AtmosphereRenderer.cpp  AtmosphereRenderer.hpp  Exception.hpp  Settings.hpp
ShowMySky/api/ShowMySky/: AtmosphereRenderer.hpp  Exception.hpp  Settings.hpp
cmake/: CheckGLM.cmake  check-glm-constexpr-ctor.cpp  gen_version.cmake
common/: AtmosphereParameters.cpp  AtmosphereParameters.hpp  EclipsedDoubleScatteringPrecomputer.cpp  EclipsedDoubleScatteringPrecomputer.hpp  Spectrum.cpp  Spectrum.hpp  TextureAverageComputer.cpp  TextureAverageComputer.hpp  TextureCompression.cpp  TextureCompression.hpp  cie-xyzw-functions.hpp  const.hpp  fourier-interpolation.hpp  rgb-to-albedo.hpp  spline-interpolation.hpp  timing.hpp  types.hpp  util.cpp  util.hpp
doc/: CMakeLists.txt  Doxyfile.cmake  Makefile  data-dependencies.dot.m4  header.html  installation.md  mainpage.md  model_generation.md  model_preview.md  showmysky_api.md  single-multiple-scattering.md  using_in_stellarium.md  whatis.md
examples/: mars.atmo  sample-small-size.atmo  sample.atmo  with-external-spectra-weighted.atmo  with-external-spectra.atmo
examples/spectra/: ground-albedo-grass.csv  ground-albedo-snow.csv  hps-lamp-spectrum.csv  mars-arabia-geom-albedo.csv  mars-dust-single-scattering-albedo.csv  ozone-233K-absorption.csv  solar-irradiance-at-toa.csv
generator/: CMakeLists.txt  cmdline.cpp  const.hpp  data.hpp  glinit.cpp  main.cpp  shaders.cpp  shaders.hpp  util.cpp  util.hpp
previewer/: AtmosphereRenderer.cpp  AtmosphereRenderer.hpp  CMakeLists.txt  GLWidget.cpp  GLWidget.hpp  Manipulator.cpp  ToolsWidget.cpp  ToolsWidget.hpp  main.cpp  util.cpp  util.hpp
shaders/: accumulate-single-scattering-texture.frag  atmosphere-from-photos.frag  calc-view-dir.h.glsl  common-functions.frag  common-functions.h.glsl  compute-airglow.frag  compute-direct-irradiance.frag  compute-eclipsed-double-scattering.compute.glsl  compute-eclipsed-double-scattering.frag  compute-eclipsed-single-scattering.frag  compute-indirect-irradiance.frag  compute-light-pollution-multiple-scattering.frag  compute-light-pollution-single-scattering.frag  compute-multiple-scattering-eclipsed-map.frag  compute-multiple-scattering.frag  compute-scattering-density.frag  compute-single-scattering-eclipsed-map.frag  compute-single-scattering.frag  compute-transmittance-functions.h.glsl  compute-transmittance.frag  copy-scattering-texture-2d.frag  copy-scattering-texture-3d.frag  copy-scattering-texture.frag  direct-irradiance.frag  direct-irradiance.h.glsl  eclipsed-direct-irradiance.frag  eclipsed-direct-irradiance.h.glsl  ground-brdf.frag  ground-brdf.h.glsl  integrate-eclipsed-multiple-scattering-map.frag  integrate-eclipsed-multiple-scattering-map.h.glsl  merge-smooth-single-scattering-texture.frag  multiple-scattering-light-pollution.frag  multiple-scattering-light-pollution.h.glsl  multiple-scattering.frag  multiple-scattering.h.glsl  render.frag  shader.geom  shader.vert  single-scattering-eclipsed.frag  (+9 more)
src/: cmdline.cpp  data.hpp  glinit.cpp  glinit.hpp  main.cpp  shaders.cpp  shaders.hpp  util.cpp  util.hpp
tests/: CMakeLists.txt  test-Fourier-interpolation.cpp  test-Refraction.cpp  test-Spectrum.cpp  test-Spline-interpolation.cpp  test-exception-catch.cpp
