add_executable(test-Spectrum test-Spectrum.cpp ../common/Spectrum.cpp)
target_link_libraries(test-Spectrum Qt${QT_VERSION}::Core
	Qt${QT_VERSION}::OpenGL glm::glm)
foreach(testNum RANGE 1 4)
    add_test(NAME "\"Spectrum test ${testNum}\"" COMMAND test-Spectrum ${testNum})
endforeach()

add_executable(test-Fourier-interpolation test-Fourier-interpolation.cpp)
target_link_libraries(test-Fourier-interpolation Eigen3::Eigen)
foreach(testId "identity transformation" "integral upsampling" "fractional upsampling")
    add_test(NAME "\"Fourier interpolation,  odd-length input, ${testId}\"" COMMAND test-Fourier-interpolation ${testId} odd)
    add_test(NAME "\"Fourier interpolation, even-length input, ${testId}\"" COMMAND test-Fourier-interpolation ${testId} even)
endforeach()

add_executable(test-Spline-interpolation test-Spline-interpolation.cpp)
target_link_libraries(test-Spline-interpolation Eigen3::Eigen)
add_test(NAME "\"Spline interpolation\"" COMMAND test-Spline-interpolation)

add_executable(test-exception-catch test-exception-catch.cpp)
target_link_libraries(test-exception-catch PUBLIC Qt${QT_VERSION}::Core Qt${QT_VERSION}::Widgets Qt${QT_VERSION}::OpenGL)
target_compile_definitions(test-exception-catch PRIVATE -DLIBRARY_FILE_PATH="$<TARGET_FILE:ShowMySky>")
add_test(NAME "\"Catching exceptions from libShowMySky\"" COMMAND test-exception-catch)

add_executable(test-Refraction test-Refraction.cpp ../CalcMySky/Refraction.cpp)
target_link_libraries(test-Refraction Qt${QT_VERSION}::Core Qt${QT_VERSION}::OpenGL glm::glm Boost::BoostHeaderOnlyLibs)
add_test(NAME "\"Refraction test 1\""  COMMAND test-Refraction 60   1 -0.0000593043217627738)
add_test(NAME "\"Refraction test 2\""  COMMAND test-Refraction 20   1 -0.0218474356404473)
add_test(NAME "\"Refraction test 3\""  COMMAND test-Refraction 10   1 -0.096704253119146)
add_test(NAME "\"Refraction test 4\""  COMMAND test-Refraction 0.1  1 -0.439017584849239)
add_test(NAME "\"Refraction test 5\""  COMMAND test-Refraction 0.1  5 -0.162446069995803)
add_test(NAME "\"Refraction test 6\""  COMMAND test-Refraction 60   5 -0.0000230769121235097)
add_test(NAME "\"Refraction test 7\""  COMMAND test-Refraction 60  -5 -0.00643034068957989)
add_test(NAME "\"Refraction test 8\""  COMMAND test-Refraction 30   0 -0.00729290855772647)
add_test(NAME "\"Refraction test 9\""  COMMAND test-Refraction 10   0 -0.143075992352471)
add_test(NAME "\"Refraction test 10\"" COMMAND test-Refraction 2.3  0 -0.472820091802713)
add_test(NAME "\"Refraction test 11\"" COMMAND test-Refraction 2.3 -3 -0.0926461975225522)
add_test(NAME "\"Refraction test 12\"" COMMAND test-Refraction 90   0 -1.03374395115664e-6)

add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND} --verbose)
